--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,16 +1,71 @@
 #root{
+    font-family: 'Montserrat';
+    --darkdark: #042e3f;
+    --darklight: #0e6772;
+    --lightdark: #42a6a5;
+    --lightlight: #f9f9f9; 
+    --highlight:#cfefa1;
+    
     display: flex;
     flex-direction: column;
     flex-basis:100%;
-    height:100vh;
-    background:#f9f9f9;
+    height:100%;
+    background:var(--lightlight);
 }
-nav div{
-    z-index:10000000;
+img,svg{
+    max-width: 100%;
+    height:auto;
+    width: 100%;
+}
+.flex-row{
+    display: flex;
+    flex-direction: row;
+}
+.flex-column{
+    display: flex;
+    flex-direction: column;
+}
+.align-center{  
+    align-self: center;
+}
+.space-between{  
+    justify-content: space-between
+}
+.hideBelow980{
+    display: none !important;
+}
+@media screen and (min-width:980px) {
+    .flex-row-desktop{
+        display: flex;
+        flex-direction: row;
+    }
+    .align-center-desktop{
+        align-items: center;
+    }
+    .hideBelow980{
+        display:block!important;
+    }
 }
 
 
 /* Mui override */
 .css-heg063-MuiTabs-flexContainer{
     justify-content:space-around;
+}
+
+/* chip */
+.MuiChip-colorPrimary.MuiChip-filledPrimary{
+    background:var(--darklight);
+    color:var(--highlight);
+}
+.MuiChip-colorPrimary.MuiChip-outlinedPrimary{
+    border-color:var(--darklight);
+    color:var(--darkdark);
+}
+
+/* amplify card */
+.amplify-card{
+    border-left: 3px solid var(--lightdark);
+    color:var(--lightdark);
+    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
 }
